--- a/src/Elements/style.css
+++ b/src/Elements/style.css
@@ -52,6 +52,18 @@ body {
     color: white;
 }
 
+#qr-container{
+    position: fixed;
+    top: 15%;
+    left: 25%;
+    right: 25%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+}
+
 
 /* header text */
 
